crates/biome_html_parser/tests/html_specs/ok/svelte/each_index_only.svelte
{#each items, i}
  <div>Item {i}</div>
{/each}
