crates/biome_html_parser/tests/html_specs/error/svelte/each_missing_as.svelte
{#each items item}
  <div>{item}</div>
{/each}
